Add delete method.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ spring:
       charset: UTF-8
       enabled: true
       force: true
+  mvc:
+    favicon:
+      enabled: true
 server:
   tomcat:
     uri-encoding: UTF-8
